* Home page lists now have no numbers * Fixed a layout issue that caused the page to be too tall.
Former-commit-id: 7d8ba0d701d5cb3435f367926efae07f4054da17

--- a/sparrow-web-ui/src/main/webapp/css/landing_page.css
+++ b/sparrow-web-ui/src/main/webapp/css/landing_page.css
@@ -127,3 +127,5 @@ h2#site-title { margin-bottom: 0 !important; }
 .highlite-w { background-color: #FFFFFF; }
 .highlite-b { background-color: #C4D8F1; }
 .highlite-normal { background-color: transparent; }
+
+#search-results-container ol { list-style-type: none; }
